# dt-flow

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
artifacts/benchmark/: iforest_model.joblib  metrics_isolation_forest.csv  metrics_rnn.csv  metrics_transformer.csv  rnn_model.pt  scaler.joblib  transformer_model.pt
artifacts/calibration_20251208-213845/: calibration_summary.txt  token_f1_grid.csv  ttr_grid_any_step.csv  ttr_grid_last_step.csv  ttr_grid_tail_mL.csv
artifacts/ttr_eval/: ttr_grid_any_step.csv  ttr_grid_last_step.csv  ttr_grid_tail_mL.csv  ttr_summary.md
configs/: data.yaml  model_dt.yaml  trainer.yaml
scripts/: prepare_unsw.sh  run_baselines_unsw.py  run_baselines_unsw.sh  run_calibration.py  run_dt_baseline.py  run_dt_baseline.sh  run_multiseed.py  run_plots.py  run_sanity.sh  run_seq_sanity.py  run_stream_infer.py  run_tokens_sanity.py  run_ttr_eval.py  setup_env.sh
src/im12dt/data/: dataset_seq.py  sequence_builder.py  utils_io.py
src/im12dt/models/: autoencoder.py  model_dt.py  temporal_embed.py  tokens.py
src/im12dt/runtime/: __init__.py  stream_dt.py
src/im12dt/training/: trainer_dt.py
src/im12dt/utils/: logging.py  registry.py  seed.py  timer.py
